objects/LLC_BI__Treasury_Service_Involvement__c.object
<CustomObject>
    <description>This object stores the Treasury Service Maintenance details that describe an authorized users involvement with an analyzed account.</description>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allow_Manual_Wire__c</fullName>
        <label>Allow Manual Wire</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Analyzed_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is an optional lookup field to the Analyzed Account for this Involvement.</description>
        <label>Analyzed Account</label>
        <referenceTo>LLC_BI__Analyzed_Account__c</referenceTo>
        <relationshipLabel>Treasury Involvements</relationshipLabel>
        <relationshipName>Treasury_Involvements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Authorized_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is an optional lookup field to the Authorized User for this Involvement.</description>
        <label>Authorized User</label>
        <referenceTo>LLC_BI__Authorized_User__c</referenceTo>
        <relationshipLabel>Treasury Involvements</relationshipLabel>
        <relationshipName>Treasury_Involvements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Treasury_Service__c</fullName>
        <description>This is a required lookup field to the Treasury Service for this Involvement.</description>
        <label>Treasury Service</label>
        <referenceTo>LLC_BI__Treasury_Service__c</referenceTo>
        <relationshipLabel>Treasury Involvements</relationshipLabel>
        <relationshipName>Treasury_Involvements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Lockbox_Location__c</fullName>
        <inlineHelpText>Please enter the address of this lockbox</inlineHelpText>
        <label>Lockbox Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Manual_Wire_Limit__c</fullName>
        <label>Manual Wire Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scanner_Model__c</fullName>
        <label>Scanner Model</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>CheXpress CX30</fullName>
                </value>
                <value>
                    <fullName>CR-120</fullName>
                </value>
                <value>
                    <fullName>CR-150</fullName>
                </value>
                <value>
                    <fullName>CR190i II</fullName>
                </value>
                <value>
                    <fullName>EC7500i Series</fullName>
                </value>
                <value>
                    <fullName>TellerScan TS240</fullName>
                </value>
                <value>
                    <fullName>TellerScan TS500</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scanner_Name__c</fullName>
        <label>Scanner Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scanner_Serial_Number__c</fullName>
        <label>Scanner Serial Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Treasury Service Involvement</label>
    <nameField>
        <label>Treasury Service Involvement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Treasury Service Involvements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>